@startuml

class ControllerBase
class MTGContext
class IdentityDbContext

class MtgController {
    + IsOwnerOrAdmin(resourceApiUserId: string) : bool
    # {static} ToCardDto(card: Card) : CardDto
}

class DeckController {
    - context: MTGContext
    + CreateDeck(deckDto: CreateDeckDto) : Task<ActionResult<DeckDto>>
    + GetAllDecksByUsername(username: string) : Task<ActionResult<List<AllDecksDto>>>
    + GetDeckById(deckId: int) : Task<ActionResult<DeckDto>>
    + DeleteDeckByName(deckId: int) : Task<IActionResult>
    + UpdateDeck(deckId: int, deckDto: UpdateDeckDto?) : Task<IActionResult>
}

DeckController --|> MtgController
MtgController --|> ControllerBase
DeckController --> MTGContext : uses
MTGContext --|> IdentityDbContext

class Deck {
    + DeckId: int
    + DeckName: string
}

class DeckCard {
    + DeckCardId: int
    + Quantity: int
}

class Card
class Player
class CardFace
class RelatedCard

Deck "1" o-- "*" DeckCard
Deck "1" --> "1" Player
DeckCard "*" --> "1" Card
Card "1" o-- "0..1" CardFace : AltFace
Card "1" o-- "*" RelatedCard : RelatedCards

class DeckDto {
    + DeckId: int
    + DeckName: string
}

class AllDecksDto {
    + DeckId: int
    + DeckName: string
    + DeckImageUri: string
}

class CreateDeckDto {
    + DeckName: string
    + CardList: string
    + CommandZone: List<string>
}

class UpdateDeckDto {
    + DeckName: string
    + CardList: string
    + CommandZone: List<string>
}

class InvalidCardsResponse {
    + Error: string
    + InvalidCards: List<string>
}

class CardDto
class CardFaceDto
class RelatedCardDto

CardDto o-- "0..1" CardFaceDto : AltFace
CardDto o-- "*" RelatedCardDto : RelatedCards

DeckDto ..> CardDto : CommandZone / Cards

DeckController ..> DeckDto
DeckController ..> AllDecksDto
DeckController ..> CreateDeckDto
DeckController ..> UpdateDeckDto
DeckController ..> InvalidCardsResponse

DeckController ..> Deck : queries
DeckController ..> Player : queries

MtgController ..> Card
MtgController ..> CardDto
MtgController ..> CardFaceDto
MtgController ..> RelatedCardDto

@enduml